--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
         <title> This is my first website</title>
         <link rel="stylesheet" href="style.css">
         <link href="https://fonts.googleapis.com/css2?family=Sixtyfour+Convergence&display=swap" rel="stylesheet">
-
+</head>
     <body>
         <h1> Welcome to Mir website</h1>
+        <img src="imagok.jpeg" alt height="400" width="300">
         <img src="okay.com" alt height="300" width="200">
+        
+        <img src="download.jpeg" alt height="400" width="300">
+        <img src="download (2).jpeg" alt height="400" width="400">
         <p id="p1"> I am mir </p><br> Its my website</p>
         <p id="p2"> Hi its me Mir </p>
         <img src="download.com" alt height="150" width="100">
